--- a/www/index.html
+++ b/www/index.html
@@ -38,10 +38,13 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
+    <!-- <ion-nav-bar class="bar-stable main-header-nav home-page">
+      <ion-nav-buttons side="left">
+        <button class="button button-icon button-clear ion-navicon" menu-toggle="left" ng-click="doSomething()"></button>
+      </ion-nav-buttons>
+      <ion-nav-back-button class="button-clear go-back">
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
