--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="MainCtrl">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
