--- a/www/index.html
+++ b/www/index.html
@@ -34,25 +34,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/constant.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/serverRequest.js"></script>
   </head>
   <body ng-app="starter" ng-controller="MainCtrl">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <!-- <ion-nav-bar class="bar-stable main-header-nav home-page">
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left" ng-click="doSomething()"></button>
-      </ion-nav-buttons>
-      <ion-nav-back-button class="button-clear go-back">
-      </ion-nav-back-button>
-    </ion-nav-bar> -->
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
-    <ion-nav-view></ion-nav-view>
+      <ion-nav-view></ion-nav-view>
   </body>
 </html>
