--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="starter">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -35,10 +35,16 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/constant.js"></script>
-    <script src="js/controllers.js"></script>
+
+    <script src="js/indexCtrl.js"></script>
+    <script src="js/bloodBankCtrl.js"></script>
+    <script src="js/dashboardCtrl.js"></script>
+    
     <script src="js/serverRequest.js"></script>
+    <script src="js/factoryRequest.js"></script>
+
   </head>
-  <body ng-app="starter" ng-controller="MainCtrl">
+  <body  ng-controller = "indexCtrl">
       <ion-nav-view></ion-nav-view>
   </body>
 </html>
