plugin added , help screen UI Done

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <script src="js/bloodBankCtrl.js"></script>
     <script src="js/dashboardCtrl.js"></script>
     <script src="js/hospitalityCtrl.js"></script>
+    <script src="js/helpCtrl.js"></script>
     
     <script src="js/serverRequest.js"></script>
     <script src="js/factoryRequest.js"></script>
