--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/dashboardCtrl.js"></script>
     <script src="js/hospitalityCtrl.js"></script>
     <script src="js/helpCtrl.js"></script>
+    <script src="js/tourCtrl.js"></script>
     
     <script src="js/serverRequest.js"></script>
     <script src="js/factoryRequest.js"></script>
