--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,9 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="js/vendor/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
