--- a/www/index.html
+++ b/www/index.html
@@ -101,7 +101,7 @@
                   registerAdEvents();
                   
               } else {
-                  alert( 'admob plugin not ready' );
+                  //alert( 'admob plugin not ready' );
               }
           }
         // optional, in case respond to events
