--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="js/vendor/ng-cordova.js"></script>
     <script src="cordova.js"></script>
-    
+    <script src="js/vendor/shake.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
