Screens Update and Other UI Changes

--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,8 @@
     <script src="js/hospitalityCtrl.js"></script>
     <script src="js/helpCtrl.js"></script>
     <script src="js/tourCtrl.js"></script>
+    <script src="js\emergencyCtrl.js"></script>
+
     
     <script src="js/serverRequest.js"></script>
     <script src="js/factoryRequest.js"></script>
